@@ -1,0 +1,9 @@
+package com.ansorgit.plugins.bash.lang.psi.api.arithmetic;
+
+/**
+ * User: jansorg
+ * Date: 07.01.12
+ * Time: 21:23
+ */
+public interface IncrementExpression extends ArithmeticExpression {
+}
